web: fix scrollbar corner color in dark mode

--- a/web/src/common/styles/authentik.css
+++ b/web/src/common/styles/authentik.css
@@ -27,6 +27,9 @@
 ::-webkit-scrollbar-track {
     background-color: transparent;
 }
+::-webkit-scrollbar-corner {
+    background-color: transparent;
+}
 
 html {
     --pf-c-nav__link--PaddingTop: 0.5rem;
